--- a/templates/visites.html
+++ b/templates/visites.html
@@ -78,7 +78,7 @@
         <div class="thumbs">
           <img src="/static/images/visites/malmousque/1.jpeg" alt="Malmousque 1">
           <img src="/static/images/visites/malmousque/2.jpeg" alt="Malmousque 2">
-          <img src="/static/images/visites/malmousque/3.jpeg" alt="Malmousque 3">
+          <img src="/static/images/visites/malmousque/3.jpg" alt="Malmousque 3">
         </div>
         <div class="info">
           📍 Malmousque, 13007 Marseille •
@@ -96,7 +96,7 @@
         </p>
         <div class="thumbs">
           <img src="/static/images/visites/vallon/1.jpeg" alt="Vallon 1">
-          <img src="/static/images/visites/vallon/2.jpeg" alt="Vallon 2">
+          <img src="/static/images/visites/vallon/2.jpg" alt="Vallon 2">
           <img src="/static/images/visites/vallon/3.jpeg" alt="Vallon 3">
         </div>
         <div class="info">
@@ -151,7 +151,7 @@
           Si le mistral parle fort, laisse-le te coiffer : tu feras local.
         </p>
         <div class="thumbs">
-          <img src="/static/images/visites/goudes/1.jpeg" alt="Goudes 1">
+          <img src="/static/images/visites/goudes/1.jpg" alt="Goudes 1">
           <img src="/static/images/visites/goudes/2.jpeg" alt="Goudes 2">
           <img src="/static/images/visites/goudes/3.jpeg" alt="Goudes 3">
         </div>
