--- a/templates/visites.html
+++ b/templates/visites.html
@@ -64,7 +64,7 @@
         </div>
         <div class="info">
           📍 Plage des Catalans, 13007 Marseille •
-          🗺️ <a target="_blank" href="https://goo.gl/maps/9H9VtfRHGEm">Google Maps</a>
+          🗺️ <a target="_blank" href="https://www.google.com/maps/search/?api=1&query=Plage+des+Catalans+Marseille">Google Maps</a>
         </div>
       </article>
       
@@ -86,7 +86,7 @@
   <div class="tips">💡 Conseil : à faire à pied ou en trottinette. Arrêtez-vous à la plage du Prophète ou au banc le plus long du monde !</div>
   <div class="info">
     📍 Corniche Président John Fitzgerald Kennedy, 13007 Marseille •
-    🗺️ <a target="_blank" href="https://goo.gl/maps/9M5kZsVZr3R2">Google Maps</a>
+    🗺️ <a target="_blank" href="https://www.google.com/maps/search/?api=1&query=Corniche+Pr%C3%A9sident+John+Fitzgerald+Kennedy+13007+Marseille">Google Maps</a>
   </div>
 </article>
 
@@ -104,7 +104,7 @@
         </div>
         <div class="info">
           📍 Malmousque, 13007 Marseille •
-          🗺️ <a target="_blank" href="https://goo.gl/maps/Yk9qX4Zr89p">Google Maps</a>
+          🗺️ <a target="_blank" href="https://www.google.com/maps/search/?api=1&query=Malmousque+Marseille">Google Maps</a>
         </div>
       </article>
 
@@ -123,7 +123,7 @@
         </div>
         <div class="info">
           📍 Vallon des Auffes, 13007 Marseille •
-          🗺️ <a target="_blank" href="https://goo.gl/maps/JyJux2YHvN62">Google Maps</a>
+          🗺️ <a target="_blank" href="https://www.google.com/maps/search/?api=1&query=Vallon+des+Auffes+Marseille">Google Maps</a>
         </div>
       </article>
 
@@ -144,7 +144,7 @@
   <div class="tips">💡 Conseil : allez-y tôt pour voir le marché aux poissons, et revenez le soir quand les lumières se reflètent dans l’eau.</div>
   <div class="info">
     📍 Quai des Belges, 13001 Marseille •
-    🗺️ <a target="_blank" href="https://goo.gl/maps/fyD3C4hvjTs">Google Maps</a>
+    🗺️ <a target="_blank" href="https://www.google.com/maps/search/?api=1&query=Quai+des+Belges+Marseille">Google Maps</a>
   </div>
 </article>
 
@@ -163,7 +163,7 @@
         </div>
         <div class="info">
           📍 Quartier du Panier, 13002 Marseille •
-          🗺️ <a target="_blank" href="https://goo.gl/maps/FsM52yWrNcu">Google Maps</a>
+          🗺️ <a target="_blank" href="https://www.google.com/maps/search/?api=1&query=Le+Panier+Marseille">Google Maps</a>
         </div>
       </article>
 
@@ -182,7 +182,7 @@
         <div class="info">
           📍 Départ : Vieux-Port, Marseille •
           ⛴️ <a target="_blank" href="https://www.frioul-if-express.com/">Horaires & billets</a> •
-          🗺️ <a target="_blank" href="https://goo.gl/maps/tBdgwRbYb142">Google Maps</a>
+          🗺️ <a target="_blank" href="https://www.google.com/maps/search/?api=1&query=Embarcad%C3%A8re+Frioul+If+Vieux-Port+Marseille">Google Maps</a>
         </div>
       </article>
 
@@ -200,7 +200,7 @@
         </div>
         <div class="info">
           📍 Les Goudes, 13008 Marseille •
-          🗺️ <a target="_blank" href="https://goo.gl/maps/bV25zR4n4h42">Google Maps</a>
+          🗺️ <a target="_blank" href="https://www.google.com/maps/search/?api=1&query=Les+Goudes+Marseille">Google Maps</a>
         </div>
       </article>
 
@@ -248,7 +248,7 @@
         <div class="info">
           📍 1 Esplanade J4, 13002 Marseille •
           🎟️ <a target="_blank" href="https://www.mucem.org/">Site officiel</a> •
-          🗺️ <a target="_blank" href="https://goo.gl/maps/8Rjcj8LPuDR2">Google Maps</a>
+          🗺️ <a target="_blank" href="https://www.google.com/maps/search/?api=1&query=Mucem+Esplanade+J4+Marseille">Google Maps</a>
         </div>
       </article>
 
@@ -268,7 +268,7 @@
         <div class="info">
           📍 Villa Méditerranée, 13002 Marseille •
           🎟️ <a target="_blank" href="https://grotte-cosquer.com/">Site officiel</a> •
-          🗺️ <a target="_blank" href="https://goo.gl/maps/qjbd1u4x6C62">Google Maps</a>
+          🗺️ <a target="_blank" href="https://www.google.com/maps/search/?api=1&query=Cosquer+M%C3%A9diterran%C3%A9e+Villa+M%C3%A9diterran%C3%A9e+Marseille">Google Maps</a>
         </div>
       </article>
 
@@ -286,7 +286,7 @@
         <div class="info">
           📍 3 Boulevard Michelet, 13008 Marseille •
           🎟️ <a target="_blank" href="https://www.orangevelodrome.com/">Site officiel</a> •
-          🗺️ <a target="_blank" href="https://goo.gl/maps/x1xJPr7os3Q2">Google Maps</a>
+          🗺️ <a target="_blank" href="https://www.google.com/maps/search/?api=1&query=Orange+V%C3%A9lodrome+Marseille">Google Maps</a>
         </div>
       </article>
 
